<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >

    <TextView
        android:id="@+id/optionsTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/music_option" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionsTextView1"
        android:layout_below="@+id/optionsTextView1"
        android:layout_marginTop="25dp" >

        <RadioButton
            android:id="@+id/music_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/on" />

        <RadioButton
            android:id="@+id/music_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off" />
    </RadioGroup>

    <TextView
        android:id="@+id/optionsTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="72dp"
        android:text="@string/sound_effects_option" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionsTextView2"
        android:layout_below="@+id/optionsTextView2"
        android:layout_marginTop="31dp" >

        <RadioButton
            android:id="@+id/sound_effects_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/on" />

        <RadioButton
            android:id="@+id/sound_effects_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off" />
    </RadioGroup>

    <Button
        android:id="@+id/optionsBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:layout_toRightOf="@+id/optionsTextView2"
        android:text="@string/back"
        android:onClick="backButtonPressed"/>

</RelativeLayout>
